tests/error/type_match/tuple_mismatched_element_count1.bz
// error: unable to match tuple expression to tuple type '[int32, int32]'
// note: mismatched tuple element counts: 3 and 2
function test()
{
	let _: [int32, int32] = [ 0, 0, 0 ];
}
